[gd_scene load_steps=6 format=3 uid="uid://dd50dqu0lfyxe"]

[ext_resource type="Theme" uid="uid://diu3ahrw1puva" path="res://addons/HTNDomainManager/PluginSystem/PluginTheme.tres" id="1_ocdje"]
[ext_resource type="Script" path="res://addons/HTNDomainManager/PluginSystem/EffectEditor/EffectLine/EffectLine.gd" id="2_nm7h6"]
[ext_resource type="PackedScene" uid="uid://driybkq8qi0rh" path="res://addons/HTNDomainManager/PluginSystem/Components/DeleteButton.tscn" id="2_y6056"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2n7jg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u04hs"]

[node name="EffectLine" type="VBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ocdje")
script = ExtResource("2_nm7h6")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="DeleteButton" parent="HBoxContainer" instance=ExtResource("2_y6056")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="HBoxContainer"]
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_2n7jg")

[node name="WorldStateLineEdit" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
placeholder_text = "World State Key"

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_u04hs")

[node name="TypeOptionButton" type="OptionButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
item_count = 7
selected = 0
allow_reselect = true
popup/item_0/text = "Boolean"
popup/item_0/id = 0
popup/item_1/text = "Int"
popup/item_1/id = 1
popup/item_2/text = "Float"
popup/item_2/id = 2
popup/item_3/text = "String"
popup/item_3/id = 3
popup/item_4/text = "Vector2"
popup/item_4/id = 4
popup/item_5/text = "Vector3"
popup/item_5/id = 5
popup/item_6/text = "World State Key"
popup/item_6/id = 6

[node name="DataContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
alignment = 2

[node name="StringValue" type="LineEdit" parent="DataContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="BoolValue" type="CheckButton" parent="DataContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "State: "

[node name="XLabel" type="Label" parent="DataContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="XValue" type="SpinBox" parent="DataContainer"]
unique_name_in_owner = true
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="YLabel" type="Label" parent="DataContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="YValue" type="SpinBox" parent="DataContainer"]
unique_name_in_owner = true
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="ZLabel" type="Label" parent="DataContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ZValue" type="SpinBox" parent="DataContainer"]
unique_name_in_owner = true
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="item_selected" from="HBoxContainer/TypeOptionButton" to="." method="_on_type_option_button_item_selected"]
